--- a/src/components/common/Spinner/styles.module.scss
+++ b/src/components/common/Spinner/styles.module.scss
@@ -5,7 +5,7 @@
   height: 80px;
 }
 
-.ldsRing div {
+.ldsRing span {
   box-sizing: border-box;
   display: block;
   position: absolute;
@@ -18,15 +18,15 @@
   border-color: #2ea7ec transparent transparent transparent;
 }
 
-.ldsRing div:nth-child(1) {
+.ldsRing span:nth-child(1) {
   animation-delay: -0.45s;
 }
 
-.ldsRing div:nth-child(2) {
+.ldsRing span:nth-child(2) {
   animation-delay: -0.3s;
 }
 
-.ldsRing div:nth-child(3) {
+.ldsRing span:nth-child(3) {
   animation-delay: -0.15s;
 }
 
